--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "jms/serializer": "^1.9",
         "jms/serializer-bundle": "^2.2",
         "nelmio/api-doc-bundle": "dev-master",
+        "nelmio/cors-bundle": "^1.5",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.1.0",
