--- a/src/ApiBundle/Resources/config/serializer/Entity.Card.yml
+++ b/src/ApiBundle/Resources/config/serializer/Entity.Card.yml
@@ -8,6 +8,7 @@ ApiBundle\Entity\Card:
             groups:
               - card_list
               - card_detail
+              - card_update
             expose: true
         title:
             groups:
