--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
         ],
         "post-install-cmd": [
+            "touch var/data/data.sqlite",
             "@symfony-scripts"
         ],
         "post-update-cmd": [
