--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,7 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
         ],
         "post-install-cmd": [
-            "touch var/data/data.sqlite",
+            "touch var/db/data.sqlite",
             "@symfony-scripts",
             "./bin/console d:m:m"
         ],
