--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -50,11 +50,11 @@ doctrine:
         #dbname:   '%database_name%'
         user:     '%database_user%'
         password: '%database_password%'
-        path:     '%kernel.project_dir%/var/data/data.sqlite'
+        path:     '%kernel.project_dir%/var/db/data.sqlite'
         charset: UTF8
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
-        #     e.g. database_path: '%kernel.project_dir%/var/data/data.sqlite'
+        #     e.g. database_path: '%kernel.project_dir%/var/db/data.sqlite'
         #   2. Uncomment database_path in parameters.yml.dist
         #   3. Uncomment next line:
         #path: '%database_path%'
