--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,5 +1,4 @@
 imports:
-    - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
     - { resource: bundles/nelmo_cors.yml }
@@ -44,13 +43,13 @@ twig:
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver:   pdo_sqlite
-        #host:     '%database_host%'
-        #port:     '%database_port%'
-        #dbname:   '%database_name%'
+        driver:   '%database_driver%'
+        host:     '%database_host%'
+        port:     '%database_port%'
+        dbname:   '%database_name%'
         user:     '%database_user%'
         password: '%database_password%'
-        path:     '%kernel.project_dir%/var/db/data.sqlite'
+        #path:     '%kernel.project_dir%/var/db/data.sqlite'
         charset: UTF8
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
