--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,6 +1,11 @@
-location / {
+#location / {
     # try to serve file directly, fallback to rewrite
-    try_files $uri @rewriteapp;
+    #try_files $uri @rewriteapp;
+#}
+
+location / {
+    # try to serve file directly, fallback to app.php
+    try_files $uri /app.php$is_args$args;
 }
 
 location @rewriteapp {
