--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,11 +1,6 @@
-#location / {
-    # try to serve file directly, fallback to rewrite
-    #try_files $uri @rewriteapp;
-#}
-
 location / {
-    # try to serve file directly, fallback to app.php
-    try_files $uri /app.php$is_args$args;
+    # try to serve file directly, fallback to rewrite
+    try_files $uri @rewriteapp;
 }
 
 location @rewriteapp {
