--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,6 +1,25 @@
-location / {
+index index.php index.html index.htm;
+
+set $frontend ./frontend/dist;
+set $backend ./web;
+
+#location / {
     # try to serve file directly, fallback to rewrite
+    #try_files $uri @rewriteapp;
+#}
+
+location = / {
+    try_files = @backend;
+}
+
+location /api {
+    root $backend;
     try_files $uri @rewriteapp;
+}
+
+location /bundles/ {
+    root $backend;
+    include cache_settings;
 }
 
 location @rewriteapp {
@@ -11,17 +30,4 @@ location @rewriteapp {
 location ~ ^/(app|app_dev|config)\.php(/|$) {
     try_files @heroku-fcgi @heroku-fcgi;
     internal;
-}
-
-location ~* \.(?:css|gif|htc|ico|js|jpe?g|png|swf)$ {
-    expires max;
-    log_not_found off;
-    ## No need to bleed constant updates. Send the all shebang in one
-    ## fell swoop.
-    tcp_nodelay off;
-    ## Set the OS file cache.
-    open_file_cache max=1000 inactive=120s;
-    open_file_cache_valid 45s;
-    open_file_cache_min_uses 2;
-    open_file_cache_errors off;
 }
