--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -9,7 +9,8 @@ set $backend ./web;
 #}
 
 location = / {
-    try_files = @backend;
+    root $frontend;
+    #try_files = @backend;
 }
 
 location /api {
