--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -13,7 +13,7 @@ location = / {
     #try_files = @backend;
 }
 
-location /api {
+location /api/ {
     root $backend;
     try_files $uri @rewriteapp;
 }
