--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,26 +1,26 @@
-index index.php index.html index.htm;
+#index index.php index.html index.htm;
 
-set $frontend ./frontend/dist;
-set $backend ./web;
+#set $frontend ./frontend/dist;
+#set $backend ./web;
 
-#location / {
+location /api/ {
     # try to serve file directly, fallback to rewrite
     #try_files $uri @rewriteapp;
+}
+
+#location = / {
+#    try_files = @backend;
 #}
 
-location = / {
-    try_files = @backend;
-}
+#location /api {
+#    root $backend;
+#    try_files $uri @rewriteapp;
+#}
 
-location /api {
-    root $backend;
-    try_files $uri @rewriteapp;
-}
-
-location /bundles/ {
-    root $backend;
+#location /bundles/ {
+#    root $backend;
     include cache_settings;
-}
+#}
 
 location @rewriteapp {
     # rewrite all to app.php
