--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -3,7 +3,7 @@
 #set $frontend ./frontend/dist;
 #set $backend ./web;
 
-location /api/ {
+location / {
     # try to serve file directly, fallback to rewrite
     try_files $uri @rewriteapp;
 }
