--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -5,6 +5,11 @@
 
 location / {
     # try to serve file directly, fallback to rewrite
+    rewrite  ^/$  /index.html  last;
+}
+
+location /api/^(.*)$ {
+    # try to serve file directly, fallback to rewrite
     try_files $uri @rewriteapp;
 }
 
