--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -8,7 +8,7 @@ location / {
     rewrite  ^/$  /index.html  last;
 }
 
-location /api/^(.*)$ {
+location /api/ {
     # try to serve file directly, fallback to rewrite
     try_files $uri @rewriteapp;
 }
