--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -5,7 +5,7 @@
 
 location / {
     # try to serve file directly, fallback to rewrite
-    rewrite  ^/$  /index.html  last;
+    try_files $uri $uri/ /index.html;
 }
 
 location /api/ {
