--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,9 +1,10 @@
 #index index.php index.html index.htm;
 
-#set $frontend ./frontend/dist;
+set $frontend /../frontend/dist;
 #set $backend ./web;
 
 location / {
+    root $frontend;
     # try to serve file directly, fallback to rewrite
     try_files $uri $uri/ /index.html;
 }
