--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,11 +1,10 @@
 #index index.php index.html index.htm;
 
 #set $frontend /../frontend/dist;
-set $backend ./web;
 
 location / {
     # try to serve file directly, fallback to rewrite
-    try_files $uri $uri/ /index.html;
+    try_files $uri $uri/ /frontend/index.html;
 }
 
 location /api/ {
