--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -4,7 +4,7 @@
 
 location / {
     # try to serve file directly, fallback to rewrite
-    try_files $uri $uri/ /frontend/index.html;
+    try_files $uri $uri/ /index.html;
 }
 
 location /api/ {
