--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -7,6 +7,10 @@ location / {
     try_files $uri $uri/ /public/$uri /index.html;
 }
 
+location ~ \.(js|css) {
+    try_files /public/$uri ;
+}
+
 location /api/ {
     # try to serve file directly, fallback to rewrite
     try_files $uri @rewriteapp;
