--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "NODE_ENV=dev node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.dev.js",
     "build": "NODE_ENV=prod webpack --config webpack.prod.js",
-    "build-resources": "NODE_ENV=prod webpack --config webpack.prod.resources.js",
+    "build-web": "NODE_ENV=prod webpack --config webpack.prod.web.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch"
   },
