--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,8 +1,8 @@
 #index index.php index.html index.htm;
 
 #set $frontend /../frontend/dist;
-source_charset utf-8
-charset utf-8
+source_charset utf-8;
+charset utf-8;
 
 location / {
     # try to serve file directly, fallback to rewrite
