--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -4,6 +4,8 @@
 source_charset utf-8;
 charset utf-8;
 
+root: /web;
+
 location / {
     # try to serve file directly, fallback to rewrite
     try_files $uri $uri/ /index.html;
