--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -4,7 +4,7 @@
 source_charset utf-8;
 charset utf-8;
 
-root: /web;
+root /web;
 
 location / {
     # try to serve file directly, fallback to rewrite
