--- a/nginx_app_web.conf
+++ b/nginx_app_web.conf
@@ -1,20 +1,15 @@
-#index index.php index.html index.htm;
-
-#set $frontend /../frontend/dist;
 source_charset utf-8;
 charset utf-8;
 
 location / {
-    root /web;
     # try to serve file directly, fallback to rewrite
     try_files $uri $uri/ /index.html;
 }
 
-location /api/ {
-    root /web;
-    # try to serve file directly, fallback to rewrite
-    try_files $uri @rewriteapp;
-}
+#location /api/ {
+#    # try to serve file directly, fallback to rewrite
+#    try_files $uri @rewriteapp;
+#}
 
 #location = / {
 #    try_files = @backend;
@@ -30,12 +25,12 @@ location /api/ {
 #    include cache_settings;
 #}
 
-location @rewriteapp {
+#location @rewriteapp {
     # rewrite all to app.php
-    rewrite ^(.*)$ /app.php/$1 last;
-}
+#    rewrite ^(.*)$ /app.php/$1 last;
+#}
 
-location ~ ^/(app|app_dev|config)\.php(/|$) {
-    try_files @heroku-fcgi @heroku-fcgi;
-    internal;
-}
+#location ~ ^/(app|app_dev|config)\.php(/|$) {
+#    try_files @heroku-fcgi @heroku-fcgi;
+#    internal;
+#}
