--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -2,6 +2,7 @@ source_charset utf-8;
 charset utf-8;
 
 location / {
+    root /app/frontend/dist;
     # try to serve file directly, fallback to rewrite
     try_files $uri $uri/ /index.html;
 }
