--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,2 +1,7 @@
-before_script:
-  - echo "This is CO/CI!"
+production:
+  type: deploy
+  script:
+  - gem install dpl
+  - dpl --provider=heroku --app=young-shelf-87369 --api-key=$HEROKU_PRODUCTION_API_KEY
+  only:
+  - tags
