--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "version": "1.0.0",
   "engines": {
     "node": "6.11.1"
+  },
+  "scripts": {
+    "postinstall": "cd frontend && npm install && npm run-script build"
   }
 }
