--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,10 @@ stages:
 production_deploy:
   environment:
     name: production
-    url: https://young-shelf-87369.herokuapp.com
+    url: https://cards-production.herokuapp.com
   stage: production
   script:
     - gem install dpl
-    - dpl --provider=heroku --app=young-shelf-87369 --api-key=$HEROKU_PRODUCTION_API_KEY
+    - dpl --provider=heroku --app=cards-production --api-key=$HEROKU_PRODUCTION_API_KEY
   only:
     - master
