--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ production_deploy:
   stage: production
   script:
     - gem install dpl
-    - dpl --provider=heroku --app=cards-production --api-key=$HEROKU_PRODUCTION_API_KEY
+    - dpl --provider=heroku --app=cards-production --api-key=$HEROKU_API_KEY
   only:
     - master
 
@@ -21,7 +21,7 @@ staging_deploy:
   stage: staging
   script:
     - gem install dpl
-    - dpl --provider=heroku --app=cards-staging --api-key=$HEROKU_PRODUCTION_API_KEY
+    - dpl --provider=heroku --app=cards-staging --api-key=$HEROKU_API_KEY
   only:
     - branches
   except:
