--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cards",
-  "description": "cards_example_app",
+  "description": "example_app",
   "version": "1.0.0",
   "engines": {
     "node": "6.11.1"
