--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -1,5 +1,5 @@
 imports:
-    - { resource: parameters_production.php }
+    - { resource: parameters_env.php }
     - { resource: config.yml }
 
 #doctrine:
