--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -49,7 +49,7 @@ doctrine:
         dbname:   '%database_name%'
         user:     '%database_user%'
         password: '%database_password%'
-        #path:     '%kernel.project_dir%/var/db/data.sqlite'
+        path:     '%database_path%'
         charset: UTF8
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
