--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -6,6 +6,7 @@ parameters:
     database_host: 127.0.0.1
     database_port: ~
     database_name: symfony
+    database_path: '%kernel.project_dir%/var/db/data.sqlite'
     database_user: root
     database_password: ~
     # You should uncomment this if you want to use pdo_sqlite
