And refresh token action

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -100,7 +100,7 @@ fos_rest:
             - { path: '^/(api|user)', fallback_format: json }
             - { path: '^/', stop: true }
 
-#    param_fetcher_listener: force
+    param_fetcher_listener: force
 #    routing_loader:
 #        default_format: null
 #        include_format: false
