--- a/app/config/bundles/nelmo_cors.yml
+++ b/app/config/bundles/nelmo_cors.yml
@@ -11,8 +11,8 @@ nelmio_cors:
         forced_allow_origin_value: ~
     paths:
         '^/api/':
-            allow_origin: ['*']
-            allow_headers: ['X-Custom-Auth', 'Content-Type']
+            allow_origin: ['^http://localhost:[0-9]+']
+            allow_headers: ['X-Custom-Auth', 'Content-Type', 'Authorization']
             allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'OPTIONS']
             max_age: 3600
         '^/':
