--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "react-router-dom": "^4.0.0",
     "react-transition-group": "^1.2.1",
     "redux": "^3.0.4",
+    "redux-axios-middleware": "^4.0.0",
     "redux-dialog": "0.0.9",
     "redux-form": "^6.6.3",
     "redux-promise": "^0.5.3"
