--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,6 +2,7 @@ imports:
     - { resource: security.yml }
     - { resource: services.yml }
     - { resource: bundles/nelmo_cors.yml }
+    - { resource: bundles/workflow.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
