--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "react-redux": "4.3.0",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
+    "react-toastify": "^2.2.0",
     "react-transition-group": "^1.2.1",
     "redux": "^3.0.4",
     "redux-axios-middleware": "^4.0.0",
