--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -10,14 +10,19 @@ imports:
 
 monolog:
     handlers:
-        main:
-            type: fingers_crossed
-            action_level: error
-            handler: nested
         nested:
-            type: stream
-            path: '%kernel.logs_dir%/%kernel.environment%.log'
+            type:  stream
+            path:  "php://stderr"
             level: debug
-        console:
-            type: console
-            process_psr_3_messages: false
+#    handlers:
+#        main:
+#            type: fingers_crossed
+#            action_level: error
+#            handler: nested
+#        nested:
+#            type: stream
+#            path: '%kernel.logs_dir%/%kernel.environment%.log'
+#            level: debug
+#        console:
+#            type: console
+#            process_psr_3_messages: false
