--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "react-datepicker": "^0.55.0",
     "react-dnd": "^2.5.3",
     "react-dnd-html5-backend": "^2.5.3",
+    "react-dnd-touch-backend": "^0.3.17",
     "react-dom": "^0.14.3",
     "react-redux": "4.3.0",
     "react-router": "^4.0.0",
