Move nav buttons to container. Change some rules in workflow.

--- a/app/config/bundles/workflow.yml
+++ b/app/config/bundles/workflow.yml
@@ -21,6 +21,9 @@ framework:
                 start_progress:
                     from: todo
                     to: in_progress
+                stop_progress:
+                    from: in_progress
+                    to: todo
                 complete:
                     from: in_progress
                     to: done
