--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "redux-axios-middleware": "^4.0.0",
     "redux-dialog": "0.0.9",
     "redux-form": "^6.6.3",
-    "redux-promise": "^0.5.3"
+    "redux-promise": "^0.5.3",
+    "serviceworker-webpack-plugin": "^0.2.3"
   }
 }
