--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "lodash": "^3.10.1",
     "moment": "^2.18.1",
     "react": "^0.14.3",
+    "react-bootstrap": "^0.31.5",
     "react-datepicker": "^0.55.0",
     "react-dnd": "^2.5.3",
     "react-dnd-html5-backend": "^2.5.3",
@@ -51,6 +52,7 @@
     "react-dom": "^0.14.3",
     "react-redux": "4.3.0",
     "react-router": "^4.0.0",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.0.0",
     "react-toastify": "^2.2.0",
     "react-transition-group": "^1.2.1",
