--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-preset-stage-1": "^6.1.18",
+    "idb": "^2.0.4",
     "lodash": "^3.10.1",
     "moment": "^2.18.1",
     "react": "^0.14.3",
