--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,6 +3,7 @@ imports:
     - { resource: services.yml }
     - { resource: bundles/nelmo_cors.yml }
     - { resource: bundles/workflow.yml }
+    - { resource: "@ServerStatusBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
