--- a/src/ServerStatusBundle/Resources/config/services.yml
+++ b/src/ServerStatusBundle/Resources/config/services.yml
@@ -1,8 +1,14 @@
 services:
     redirect_subscriber:
         class: ServerStatusBundle\EventHandler\Kernel\ServerStatusSubscriber
-        #arguments:
-           #- '@redirect.handler'
+        arguments:
+           - '@server.status.repository'
            #- '@logger'
         tags:
            - { name: kernel.event_subscriber }
+
+    server.status.repository:
+        class: Doctrine\ORM\EntityRepository
+        factory: ['@doctrine.orm.entity_manager', getRepository]
+        arguments:
+            - ServerStatusBundle\Entity\ServerStatus
