Changes in nginx conf

--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -7,7 +7,7 @@ location / {
     try_files $uri $uri/ /index.html;
 }
 
-location /api/ {
+location /(api|server)/ {
     # try to serve file directly, fallback to rewrite
     try_files $uri @rewriteapp;
 }
@@ -21,32 +21,3 @@ location ~ ^/(app|app_dev|config)\.php(/|$) {
     try_files @heroku-fcgi @heroku-fcgi;
     internal;
 }
-
-#location /api/ {
-#    # try to serve file directly, fallback to rewrite
-#    try_files $uri @rewriteapp;
-#}
-
-#location = / {
-#    try_files = @backend;
-#}
-
-#location /api {
-#    root $backend;
-#    try_files $uri @rewriteapp;
-#}
-
-#location /bundles/ {
-#    root $backend;
-#    include cache_settings;
-#}
-
-#location @rewriteapp {
-    # rewrite all to app.php
-#    rewrite ^(.*)$ /app.php/$1 last;
-#}
-
-#location ~ ^/(app|app_dev|config)\.php(/|$) {
-#    try_files @heroku-fcgi @heroku-fcgi;
-#    internal;
-#}
