--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -7,7 +7,7 @@ location / {
     try_files $uri $uri/ /index.html;
 }
 
-location /(api|server)/ {
+location /api/ {
     # try to serve file directly, fallback to rewrite
     try_files $uri @rewriteapp;
 }
