--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -12,6 +12,10 @@ location /api/ {
     try_files $uri @rewriteapp;
 }
 
+location /server/ {
+    try_files $uri @rewriteapp;
+}
+
 location @rewriteapp {
     # rewrite all to app.php
     rewrite ^(.*)$ /app.php/$1 last;
