--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -7,12 +7,8 @@ location / {
     try_files $uri $uri/ /index.html;
 }
 
-location /api/ {
+location ~ ^/(api/server)/ {
     # try to serve file directly, fallback to rewrite
-    try_files $uri @rewriteapp;
-}
-
-location /server/ {
     try_files $uri @rewriteapp;
 }
 
