--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.2.1",
+    "babel-eslint": "^8.0.2",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
@@ -22,6 +23,9 @@
     "chai-jquery": "^2.0.0",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
+    "eslint": "^4.11.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^2.2.1",
