--- a/app/config/bundles/nelmo_cors.yml
+++ b/app/config/bundles/nelmo_cors.yml
@@ -11,9 +11,9 @@ nelmio_cors:
         forced_allow_origin_value: ~
     paths:
         '^/api/':
-            allow_origin: ['^http://localhost:[0-9]+', '*']
+            allow_origin: ['^http://localhost:[0-9]+', 'http://cards-production.herokuapp.com', 'http://cards-staging.herokuapp.com']
             allow_headers: ['X-Custom-Auth', 'Content-Type', 'Authorization']
-            allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'OPTIONS']
+            allow_methods: ['POST', 'PUT', 'PATCH', 'GET', 'DELETE', 'OPTIONS']
             max_age: 3600
         #'^/':
         #    origin_regex: true
