--- a/app/config/bundles/nelmo_cors.yml
+++ b/app/config/bundles/nelmo_cors.yml
@@ -3,7 +3,7 @@ nelmio_cors:
         allow_credentials: false
         allow_origin: []
         allow_headers: []
-        allow_methods: []
+        allow_methods: ['OPTIONS']
         expose_headers: []
         max_age: 0
         hosts: []
