--- a/app/config/bundles/nelmo_cors.yml
+++ b/app/config/bundles/nelmo_cors.yml
@@ -1,24 +1,9 @@
 nelmio_cors:
-    defaults:
-        allow_credentials: false
-        allow_origin: []
-        allow_headers: []
-        allow_methods: ['OPTIONS']
-        expose_headers: []
-        max_age: 0
-        hosts: []
-        origin_regex: false
-        forced_allow_origin_value: ~
     paths:
-        '^/api/':
-            allow_origin: ['^http://localhost:[0-9]+', 'http://cards-production.herokuapp.com', 'http://cards-staging.herokuapp.com']
-            allow_headers: ['X-Custom-Auth', 'Content-Type', 'Authorization']
+        '^/api':
+            allow_credentials: true
+            allow_origin: ['^http://localhost:[0-9]+', '*']
+            allow_headers: ['X-Custom-Auth', 'Content-Type', 'Authorization', 'Origin', 'X-Requested-With', 'Accept']
             allow_methods: ['POST', 'PUT', 'PATCH', 'GET', 'DELETE', 'OPTIONS']
+            expose_headers: []
             max_age: 3600
-        #'^/':
-        #    origin_regex: true
-        #    allow_origin: ['^http://localhost:[0-9]+']
-        #    allow_headers: ['X-Custom-Auth']
-        #    allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'OPTIONS']
-        #    max_age: 3600
-        #    hosts: ['^api\.']
