--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -2,9 +2,9 @@ source_charset utf-8;
 charset utf-8;
 
 location / {
-    if ($scheme = http) {
-        rewrite ^/(.*) https://$host/$1 permanent;
-    }
+    #if ($scheme = http) {
+        #rewrite ^/(.*) https://$host/$1 permanent;
+    #}
     root /app/frontend/dist;
     # try to serve file directly, fallback to rewrite
     try_files $uri $uri/ /index.html;
